Fix spacing

--- a/_src/sass/partials/admin/_cs-ui.scss
+++ b/_src/sass/partials/admin/_cs-ui.scss
@@ -32,11 +32,12 @@
 	}
 	
 	.page-title{
-		width: 65%;
 		float:left;
+		width: 65%;
 	}
 	
 	.page-options{
+		float:left;
 		width:30%;
 	}
 }
